--- a/E-Com/requirements.txt
+++ b/E-Com/requirements.txt
@@ -88,7 +88,7 @@ pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 pytz==2025.2
-pywinpty==2.0.15
+pywinpty==2.0.15; sys_platform == "win32"
 PyYAML==6.0.2
 pyzmq==26.4.0
 referencing==0.36.2
