--- a/E-Com/.env
+++ b/E-Com/.env
@@ -2,5 +2,5 @@
 SECRET_KEY = 'django-insecure-v4a8t$vl99m45w6br1u2=5s_@2(h(x_an$puxwg+@2fr0h@*+$'
 
 DEBUG=True
-ALLOWED_HOSTS=127.0.0.1,localhost
+ALLOWED_HOSTS = env.list('ALLOWED_HOSTS', default=['127.0.0.1', 'localhost'])
 CORS_ALLOWED_ORIGINS=http://localhost:3000
