--- a/E-Com/.env
+++ b/E-Com/.env
@@ -1,4 +1,5 @@
-SECRET_KEY=django-insecure-v4a8t$vl99m45w6br1u2=5s_@2(h(x_an$puxwg+@2fr0h@*+$
-DEBUG=True
-ALLOWED_HOSTS=e-com-fgbd.onrender.com,127.0.0.1,localhost
-CORS_ALLOWED_ORIGINS=http://localhost:3000
+SECRET_KEY=your_real_secret_key_here
+DEBUG=False
+ALLOWED_HOSTS=e-com-fgbd.onrender.com,localhost,127.0.0.1
+# DATABASE_URL=postgres://user:password@host:port/dbname
+CORS_ALLOWED_ORIGINS=https://your-react-app-domain.com,http://localhost:3000
