backend improve with images hosting

--- a/E-Com/.env
+++ b/E-Com/.env
@@ -1,5 +1,11 @@
 SECRET_KEY=your_real_secret_key_here
 DEBUG=False
 ALLOWED_HOSTS=e-com-fgbd.onrender.com,localhost,127.0.0.1
-# DATABASE_URL=postgres://user:password@host:port/dbname
+
+# Cloudinary settings
+CLOUDINARY_CLOUD_NAME=dkuchuh5g
+CLOUDINARY_API_KEY=758269942593574
+CLOUDINARY_API_SECRET=DH59qEs0LQ9X6CjznMJQTyNZfV0
+
+# CORS config (multiple allowed domains)
 CORS_ALLOWED_ORIGINS=https://your-react-app-domain.com,http://localhost:3000
