--- a/E-Com/.env
+++ b/E-Com/.env
@@ -8,4 +8,4 @@ CLOUDINARY_API_KEY=758269942593574
 CLOUDINARY_API_SECRET=DH59qEs0LQ9X6CjznMJQTyNZfV0
 
 # CORS config (multiple allowed domains)
-CORS_ALLOWED_ORIGINS=https://your-react-app-domain.com,http://localhost:3000
+CORS_ALLOWED_ORIGINS=https://your-react-app-domain.com,http://localhost:3000,http://localhost:5173
