--- a/E-Com/requirements.txt
+++ b/E-Com/requirements.txt
@@ -9,7 +9,9 @@ django-cors-headers==4.7.0
 django-environ==0.12.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+gunicorn==23.0.0
 idna==3.10
+packaging==25.0
 pillow==11.3.0
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
